--- a/public/offline.html
+++ b/public/offline.html
@@ -4,51 +4,43 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="theme-color" content="#2563eb">
-  <title>غير متصل - VitaSlims ERP</title>
+  <title>غير متصل - 7ESAB ERP</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
-      background: linear-gradient(135deg, #0f172a 0%, #1e293b 100%);
+      background: linear-gradient(135deg, #dbeafe 0%, #ffffff 50%, #dbeafe 100%);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
       padding: 20px;
-      color: white;
+      color: #0c4a6e;
     }
     .container {
       text-align: center;
       max-width: 400px;
     }
-    .icon {
-      width: 120px;
-      height: 120px;
-      background: linear-gradient(135deg, #2563eb 0%, #4f46e5 100%);
-      border-radius: 24px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+    .logo {
+      width: 160px;
+      height: 160px;
       margin: 0 auto 24px;
-      box-shadow: 0 20px 40px rgba(37, 99, 235, 0.3);
+      filter: drop-shadow(0 20px 40px rgba(12, 74, 110, 0.2));
     }
-    .icon svg {
-      width: 60px;
-      height: 60px;
-      stroke: white;
-      fill: none;
-      stroke-width: 2;
+    .logo img {
+      width: 100%;
+      height: 100%;
     }
     h1 {
       font-size: 28px;
-      font-weight: 700;
+      font-weight: 900;
       margin-bottom: 12px;
-      background: linear-gradient(90deg, #60a5fa, #a78bfa);
+      background: linear-gradient(135deg, #0284c7, #0c4a6e);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
     p {
-      color: #94a3b8;
+      color: #64748b;
       font-size: 16px;
       line-height: 1.6;
       margin-bottom: 32px;
@@ -58,7 +50,7 @@
       align-items: center;
       gap: 8px;
       padding: 14px 28px;
-      background: linear-gradient(135deg, #2563eb 0%, #4f46e5 100%);
+      background: linear-gradient(135deg, #1e40af 0%, #0c4a6e 100%);
       color: white;
       border: none;
       border-radius: 12px;
@@ -70,7 +62,7 @@
     }
     .btn:hover {
       transform: translateY(-2px);
-      box-shadow: 0 10px 20px rgba(37, 99, 235, 0.4);
+      box-shadow: 0 10px 20px rgba(12, 74, 110, 0.3);
     }
     .btn:active { transform: translateY(0); }
     .btn svg {
@@ -83,20 +75,18 @@
     .status {
       margin-top: 24px;
       padding: 12px 20px;
-      background: rgba(239, 68, 68, 0.1);
-      border: 1px solid rgba(239, 68, 68, 0.3);
+      background: rgba(12, 74, 110, 0.1);
+      border: 1px solid rgba(12, 74, 110, 0.2);
       border-radius: 8px;
-      color: #fca5a5;
+      color: #0c4a6e;
       font-size: 14px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="icon">
-      <svg viewBox="0 0 24 24">
-        <path d="M1 1l22 22M16.72 11.06A10.94 10.94 0 0 1 19 12.55M5 12.55a10.94 10.94 0 0 1 5.17-2.39M10.71 5.05A16 16 0 0 1 22.58 9M1.42 9a15.91 15.91 0 0 1 4.7-2.88M8.53 16.11a6 6 0 0 1 6.95 0M12 20h.01"/>
-      </svg>
+    <div class="logo">
+      <img src="/icons/icon-192x192.svg" alt="7ESAB Logo">
     </div>
     <h1>غير متصل بالإنترنت</h1>
     <p>يبدو أنك غير متصل بالإنترنت حالياً. يرجى التحقق من اتصالك والمحاولة مرة أخرى.</p>
@@ -107,7 +97,7 @@
       إعادة المحاولة
     </button>
     <div class="status">
-      <strong>VitaSlims ERP</strong> - سيتم إعادة الاتصال تلقائياً عند توفر الإنترنت
+      <strong>7ESAB ERP</strong> - سيتم إعادة الاتصال تلقائياً عند توفر الإنترنت
     </div>
   </div>
   <script>
